--- a/publication/signal_denoising/cite.bib
+++ b/publication/signal_denoising/cite.bib
@@ -1,12 +1,19 @@
-@article{Zajzon2022,
-abstract = {Information from the sensory periphery is conveyed to the cortex via structured projection pathways that spatially segregate stimulus features, providing a robust and efficient encoding strategy. Beyond sensory encoding, this prominent anatomical feature extends throughout the neocortex. However, the extent to which it influences cortical processing is unclear. In this study, we combine cortical circuit modeling with network theory to demonstrate that the sharpness of topographic projections acts as a bifurcation parameter, controlling the macroscopic dynamics and representational precision across a modular network. By shifting the balance of excitation and inhibition, topographic modularity gradually increases task performance and improves the signal-to-noise ratio across the system. We show that this is a robust and generic structural feature that enables a broad range of behaviorally-relevant operating regimes, and provide an in-depth theoretical analysis unravelling the dynamical principles underlying the mechanism.Competing Interest StatementThe authors have declared no competing interest.},
+@article {10.7554/eLife.77009,
+article_type = {journal},
+title = {Signal denoising through topographic modularity of neural circuits},
 author = {Zajzon, Barna and Dahmen, David and Morrison, Abigail and Duarte, Renato},
-doi = {10.1101/2022.01.10.475681},
-file = {:home/neuro/Desktop/playground/literature/[bibliographic{\_}db]/Mendeley{\_}DB/2022.01.10.475681v1.full.pdf:pdf},
-journal = {bioRxiv},
+editor = {Sharpee, Tatyana O and Gold, Joshua I},
+volume = 12,
+year = 2023,
 month = {jan},
-pages = {2022.01.10.475681},
-title = {{Signal denoising through topographic modularity of neural circuits}},
-url = {http://biorxiv.org/content/early/2022/01/12/2022.01.10.475681.abstract},
-year = {2022}
+pub_date = {2023-01-26},
+pages = {e77009},
+citation = {eLife 2023;12:e77009},
+doi = {10.7554/eLife.77009},
+url = {https://doi.org/10.7554/eLife.77009},
+abstract = {Information from the sensory periphery is conveyed to the cortex via structured projection pathways that spatially segregate stimulus features, providing a robust and efficient encoding strategy. Beyond sensory encoding, this prominent anatomical feature extends throughout the neocortex. However, the extent to which it influences cortical processing is unclear. In this study, we combine cortical circuit modeling with network theory to demonstrate that the sharpness of topographic projections acts as a bifurcation parameter, controlling the macroscopic dynamics and representational precision across a modular network. By shifting the balance of excitation and inhibition, topographic modularity gradually increases task performance and improves the signal-to-noise ratio across the system. We demonstrate that in biologically constrained networks, such a denoising behavior is contingent on recurrent inhibition. We show that this is a robust and generic structural feature that enables a broad range of behaviorally relevant operating regimes, and provide an in-depth theoretical analysis unraveling the dynamical principles underlying the mechanism.},
+keywords = {network dynamics, neural circuits, theoretical neuroscience, topographic modularity, signal denoising},
+journal = {eLife},
+issn = {2050-084X},
+publisher = {eLife Sciences Publications, Ltd},
 }
